--- a/configs/chip_defconfig
+++ b/configs/chip_defconfig
@@ -38,20 +38,43 @@ BR2_PACKAGE_SOX=y
 BR2_PACKAGE_MMC_UTILS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_MTD_MKFSUBIFS=y
-BR2_PACKAGE_DBUS=y
 BR2_PACKAGE_LSUIO=y
 BR2_PACKAGE_PCIUTILS=y
-BR2_PACKAGE_LIBSNDFILE=y
-BR2_PACKAGE_GNUTLS=y
-BR2_PACKAGE_LIBUSB=y
-BR2_PACKAGE_LIBPCAP=y
-BR2_PACKAGE_LIBDAEMON=y
-BR2_PACKAGE_LIBGLIB2=y
-BR2_PACKAGE_READLINE=y
+BR2_PACKAGE_AVAHI=y
+BR2_PACKAGE_AVAHI_DAEMON=y
+BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
+BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
+BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
+BR2_PACKAGE_BLUEZ_UTILS_USB=y
+BR2_PACKAGE_BLUEZ_UTILS_GATT=y
+BR2_PACKAGE_CONNMAN=y
+BR2_PACKAGE_CONNMAN_WIFI=y
+BR2_PACKAGE_CONNMAN_WISPR=y
+BR2_PACKAGE_CONNMAN_BLUETOOTH=y
+BR2_PACKAGE_CONNMAN_CLIENT=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_OPENOBEX=y
+BR2_PACKAGE_OPENOBEX_BLUEZ=y
+BR2_PACKAGE_OPENOBEX_LIBUSB=y
+BR2_PACKAGE_OPENOBEX_APPS=y
+BR2_PACKAGE_OPENOBEX_SYSLOG=y
+BR2_PACKAGE_OPENOBEX_DUMP=y
 BR2_PACKAGE_OPENSSH=y
+BR2_PACKAGE_RTL8723BS_BT=y
+BR2_PACKAGE_RTL8723BS_BT_CUSTOM_GIT=y
+BR2_PACKAGE_RTL8723BS_BT_CUSTOM_REPO_URL="https://github.com/lwfinger/rtl8723bs_bt.git"
+BR2_PACKAGE_RTL8723BS_BT_CUSTOM_REPO_VERSION="master"
+BR2_PACKAGE_RTL8723BS=y
+BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
+BR2_PACKAGE_WPA_SUPPLICANT_EAP=y
+BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT=y
+BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG=y
+BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
+BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
