back to normal, new linux version without nand speedup

--- a/configs/chip_defconfig
+++ b/configs/chip_defconfig
@@ -28,6 +28,7 @@ BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="sun5i-r8-chip"
 BR2_LINUX_KERNEL_DTC_OVERLAY=y
 BR2_LINUX_KERNEL_EXTERNAL_DT_OVERLAYS=y
+BR2_LINUX_KERNEL_DTS_OVERLAYS=""
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_PACKAGE_HWTEST=y
@@ -66,6 +67,9 @@ BR2_PACKAGE_RTL8723BS_BT_CUSTOM_GIT=y
 BR2_PACKAGE_RTL8723BS_BT_CUSTOM_REPO_URL="https://github.com/lwfinger/rtl8723bs_bt.git"
 BR2_PACKAGE_RTL8723BS_BT_CUSTOM_REPO_VERSION="master"
 BR2_PACKAGE_RTL8723BS_MP_DRIVER=y
+BR2_PACKAGE_RTL8723BS_MP_DRIVER_CUSTOM_GIT=y
+BR2_PACKAGE_RTL8723BS_MP_DRIVER_CUSTOM_REPO_URL="https://github.com/NextThingCo/RTL8723BS.git"
+BR2_PACKAGE_RTL8723BS_MP_DRIVER_CUSTOM_REPO_VERSION="master"
 BR2_PACKAGE_TCPDUMP=y
 BR2_PACKAGE_WGET=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
